Added Home, detailing, icon, and finishing touch

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,25 +3,19 @@
     <string name="title_home">Home</string>
     <string name="title_upcoming">Upcoming</string>
     <string name="title_finished">Finished</string>
-    <string name="title_activity_scrolling">ScrollingActivity</string>
-    <string name="large_text">
-        "Material is the metaphor.\n\n"
-
-        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
-        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
-        "technologically advanced and open to imagination and magic.\n"
-        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
-        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
-        "flexibility of the material creates new affordances that supercede those in the physical "
-        "world, without breaking the rules of physics.\n"
-        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
-        "interact, and exist in space and in relation to each other. Realistic lighting shows "
-        "seams, divides space, and indicates moving parts.\n\n"
-    </string>
-    <string name="action_settings">Settings</string>
     <string name="title_activity_detail">DetailActivity</string>
     <string name="information_header">Informasi:</string>
     <string name="visit_website">Visit Website</string>
 
     <string name="searchbar_hint">Cari event!</string>
+    <string name="dicoding_event">Dicoding Event</string>
+    <string name="finished_events">Finished Events</string>
+    <string name="upcoming_events">Upcoming Events</string>
+    <string name="placeholder_image">placeholder_image</string>
+    <string name="fetch_data">Fetching data...</string>
+    <string name="sisa_kuota">Sisa Kuota:</string>
+    <string name="fetching_data">Fetching data...</string>
+    <string name="these_might_interest_you">These might interest you</string>
+    <string name="recommended_event_for_you">Recommended event for you</string>
+    <string name="title_placeholder">Title</string>
 </resources>
