--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="these_might_interest_you">These might interest you</string>
     <string name="recommended_event_for_you">Recommended event for you</string>
     <string name="title_placeholder">Title</string>
+    <string name="penyelenggara_acara">Penyelenggara Acara</string>
 </resources>
