--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -42,4 +42,5 @@
     <string name="header_settingsfragment">SettingsFragment</string>
     <string name="title_settings">Settings</string>
     <string name="event">You don\'t have any favorite Events</string>
+    <string name="button">button</string>
 </resources>
